fix: alignment and mobile markup for user link in the header

--- a/src/site/public/css/header.scss
+++ b/src/site/public/css/header.scss
@@ -21,6 +21,7 @@
 .header__buttons {
   list-style: none;
   display: flex;
+  align-items: center;
 
   margin: 0;
   padding: 0;
@@ -41,7 +42,9 @@
     right: 6rem;
     top: 4rem;
     z-index: 10;
-    background: #f4f4f4;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
     flex-direction: column;
   }
 
@@ -50,7 +53,8 @@
   }
 
   .header__buttons__list-item {
-    margin: 2.5rem 3.5rem;
+    margin: 0;
+    padding: 1rem;
   }
 
   .header__buttons--mobile {
@@ -81,4 +85,12 @@
   display: block;
   color: #1B1B1C;
   text-decoration: none;
+}
+
+.header__buttons__user-email-link {
+  color: #1B1B1C;
+}
+
+.header__buttons__user-email-link__image {
+  margin-right: 1.5rem;
 }
